apps/staging/nginx/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.home.frandberg.live`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.home.frandberg.live`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: local-staging-tls
